iPhone screen size friendly demo

--- a/scrollControl/ios_swipe_scroll.html
+++ b/scrollControl/ios_swipe_scroll.html
@@ -13,13 +13,6 @@
 			padding: 0;
 			height:100%;
 		}
-			
-		#scrollable_block1{
-			padding: 10px;
-			height: 200px;
-			border: 1px solid #cc0000;
-			background: #efefef;
-		}
 		
 		.small_block{
 			margin: 20px 20px 0 0;
@@ -44,26 +37,24 @@
 
 </head>
 <body ontouchstart="scrollControl.touchStart(event)" ontouchmove="scrollControl.touchMove(event)">
-
-	<div id="scrollable_block1" class="scrollable">
-		<p>1. some content inside a panel3</p>
-		<p>2. some content inside a panel</p>
-		<p>3. some content inside a panel</p>
-		<p>4. some content inside a panel</p>
+	
+	<div class="scrollable small_block">
+		<p>some content inside a panel3</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
+		<p>some content inside a panel</p>
+</div>
+	
+	<div class="scrollable small_block">
+		<p>some content inside a panel3</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 	</div>
 	
-	<div class="small_block"></div>
-	
-	<div class="small_block"></div>
-	
 	<div class="scrollable small_block">
 		<div>
-		<p>some content inside a panel3</p>
+		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
@@ -71,7 +62,7 @@
 	</div>
 	
 	<div class="scrollable small_block">
-		<p>some content inside a panel3</p>
+		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
 		<p>some content inside a panel</p>
